# vzlogger

./: CMakeLists-pico.txt  lwipopts.h  lwipopts_examples_common.h
include/: ApiIF.hpp  Channel.hpp  MeterMap.hpp  Ntp.hpp  meter_protocol.hpp
include/api/: LocalGUI.hpp  LwipIF.hpp  Volkszaehler.hpp
include/protocols/: MeterGenericADC.hpp  MeterPicoSelfmon.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  Channel.cpp  LocalGUI.cpp  LocalGUI.h  Meter.cpp  MeterMap.cpp  Ntp.cpp  Reading.cpp  VzPicoFsys.cpp  VzPicoFsys.h  VzPicoHttpd.cpp  VzPicoHttpd.h  VzPicoLogger.cpp  VzPicoLogger.h  VzPicoSys.cpp  VzPicoSys.h  VzPicoWifi.cpp  VzPicoWifi.h  vz_pico_inline_config.h  vzlogger_pico.cpp
src/api/: CMakeLists.txt  LocalGUI.cpp  LwipIF.cpp  Volkszaehler.cpp
src/protocols/: CMakeLists.txt  MeterGenericADC.cpp  MeterHCSR04.cpp  MeterPicoSelfmon.cpp
